# midas-journal-299

DelaunayConformingFilter/: CMakeLists.txt  itkQuadEdgeMeshDelaunayConformingFilterTest.cxx
DelaunayConformingFilter/doc/: delaunay.bib  delaunayconforming.tex
DelaunayConformingFilter/doc/fig/.svn/: entries
DelaunayConformingFilter/doc/fig/.svn/text-base/: wave0.png.svn-base  wave1.png.svn-base
__MACOSX/: ._DelaunayConformingFilter
__MACOSX/DelaunayConformingFilter/: ._CMakeLists.txt  ._data  ._doc  ._itkPriorityQueueContainer.h  ._itkQuadEdgeMeshDelaunayConformingFilter.h  ._itkQuadEdgeMeshDelaunayConformingFilter.txx  ._itkQuadEdgeMeshDelaunayConformingFilterTest.cxx
__MACOSX/DelaunayConformingFilter/data/: ._wave.vtk
__MACOSX/DelaunayConformingFilter/doc/: ._InsightArticle.cls  ._InsightJournal.sty  ._delaunay.bib  ._delaunayconforming.tex  ._fig
__MACOSX/DelaunayConformingFilter/doc/fig/: ._.svn
__MACOSX/DelaunayConformingFilter/doc/fig/.svn/: ._entries  ._format  ._prop-base  ._props  ._text-base  ._tmp
__MACOSX/DelaunayConformingFilter/doc/fig/.svn/prop-base/: ._flip0.png.svn-base  ._flip1.png.svn-base  ._wave0.png.svn-base  ._wave1.png.svn-base
__MACOSX/DelaunayConformingFilter/doc/fig/.svn/text-base/: ._flip0.png.svn-base  ._flip1.png.svn-base  ._wave0.png.svn-base  ._wave1.png.svn-base
__MACOSX/DelaunayConformingFilter/doc/fig/.svn/tmp/: ._prop-base  ._props  ._text-base
